name:          synchronous-streams
version:       0.1.0.0
cabal-version: >=1.10
build-type:    Simple
copyright:     (c) 2019 yumiova
author:        yumiova
maintainer:    yumiova@protonmail.ch
stability:     alpha
homepage:      https://github.com/yumiova/synchronous-streams
bug-reports:   https://github.com/yumiova/synchronous-streams/issues
synopsis:      Simple and fast embedding of synchronous dataflow
category:      Data

library
  default-language: Haskell2010
  build-depends:    base >=4.12.0.0 && <4.13
  hs-source-dirs:   library
