name:          synchronous-streams
version:       0.1.0.0
cabal-version: >=1.10
build-type:    Simple
copyright:     (c) 2019 yumiova
author:        yumiova
maintainer:    yumiova@protonmail.ch
stability:     alpha
homepage:      https://github.com/yumiova/synchronous-streams
bug-reports:   https://github.com/yumiova/synchronous-streams/issues
synopsis:      Simple and fast embedding of synchronous dataflow
category:      Data

library
  default-language: Haskell2010
  exposed-modules:  Data.Stream.Synchronous
  build-depends:
      base          >=4.12.0.0 && <4.13
    , free          >=5.1.2    && <5.2
    , primitive     >=0.6.4.0  && <0.7
    , streams       >=3.3      && <3.4
    , vector-space  >=0.16     && <0.17

  other-modules:    Control.Monad.Primitive.Unsafe
  hs-source-dirs:   library
  other-extensions:
    FlexibleInstances
    FunctionalDependencies
    RankNTypes
    TupleSections
    TypeFamilies
    UnboxedTuples

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/yumiova/synchronous-streams
